--- a/src/Components/PDF.css
+++ b/src/Components/PDF.css
@@ -1,30 +1,50 @@
 .Post{
+    /* display: inline; */
+    margin-top: 2%;
+    margin-bottom: 2%;
     justify-content: center;
     align-items: center;
-    margin-left: 20%;
-   height: 30rem;
-    width: 100%;
-    background-image: url('./tc.png');
-    background-repeat: no-repeat;
+    /* margin-left: 20%; */
+  /* height:32rem; */
+  background-size: auto;
+
+  height: 32rem;
+  width: auto; 
+  background: url('./tc.png');
+  background-position: center;
+  background-repeat: no-repeat;
+  
+   
     /* margin: 2%; */
+    
 }
+
 .name{
-    position: absolute;
- margin-top: 17%;
- margin-left: 22%;
+    
+    display: inline;
+  position: relative;
+  top: 40%;
+  font-size: xx-large;
+ font-weight: bolder;
 }
 .institution{
  
-        position: absolute;
-     margin-top: 25%;
-     margin-left: 22%;
+    
+
+    position: relative;
+    left: auto;
+    top: 49%;
+    font-size: xx-large;
+   font-weight: bolder;
+  
     
 }
 .date{
  
-    position: absolute;
- margin-top: 31%;
- margin-left: 28%;
- font-size: smaller;
-
+    position: relative;
+    left: auto;
+    top: 52%;
+    font-size:smaller;
+   font-weight: bolder;
+  
 }
